read more button text overlap issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -32,4 +32,5 @@
     right: 0;
     margin-left: 3px;
     margin-right: 3px;
+    margin-bottom: 10px;
 }
